JumpScript/tests/baselines/reference/recursiveExportAssignmentAndFindAliasedType6.errors.txt
tests/cases/compiler/recursiveExportAssignmentAndFindAliasedType6_moduleE.jump(1,1): error TS2303: Circular definition of import alias 'self'.


==== tests/cases/compiler/recursiveExportAssignmentAndFindAliasedType6_moduleA.jump (0 errors) ====
    import moduleC = require("recursiveExportAssignmentAndFindAliasedType6_moduleC");
    import ClassB = require("recursiveExportAssignmentAndFindAliasedType6_moduleB");
    export var b: ClassB; // This should result in type ClassB
==== tests/cases/compiler/recursiveExportAssignmentAndFindAliasedType6_moduleC.jump (0 errors) ====
    import self = require("recursiveExportAssignmentAndFindAliasedType6_moduleD");
    export = self;
    
==== tests/cases/compiler/recursiveExportAssignmentAndFindAliasedType6_moduleD.jump (0 errors) ====
    import self = require("recursiveExportAssignmentAndFindAliasedType6_moduleE");
    export = self;
    
==== tests/cases/compiler/recursiveExportAssignmentAndFindAliasedType6_moduleE.jump (1 errors) ====
    import self = require("recursiveExportAssignmentAndFindAliasedType6_moduleC");
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2303: Circular definition of import alias 'self'.
    export = self;
    
==== tests/cases/compiler/recursiveExportAssignmentAndFindAliasedType6_moduleB.jump (0 errors) ====
    class ClassB { }
    export = ClassB;
    